[gd_scene load_steps=3 format=3 uid="uid://d1qjnqq2nagyi"]

[ext_resource type="Script" path="res://menus/lobby_viewer.gd" id="1_q7ylh"]
[ext_resource type="LabelSettings" uid="uid://dhbiycipdoc0d" path="res://menus/header_label_settings.tres" id="2_qx51b"]

[node name="LobbyViewer" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7ylh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PaddingLeft" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.325441, 0.325441, 0.325441, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.5
offset_right = 103.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PaddingTop" type="Control" parent="HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="LabelLobbies" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer/PaddingTop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Lobby Code: 1234"
label_settings = ExtResource("2_qx51b")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonMainMenu" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Leave Lobby"

[node name="PaddingBottom" type="Control" parent="HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="PaddingRight" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
